# llm_test_framework

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __version__.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: advanced.md  quickstart.md  reference.md
docs/examples/: README.md  combine_predefined_and_custom_tests.md  side_by_side.md
docs/metrics/: context_relevance.md  ground_truth.md  groundedness.md  metrics.md
kjr_llm/: __init__.py
kjr_llm/app/: __init__.py  app.py
kjr_llm/exceptions/: __init__.py  metric_not_available_error.py  unknown_target_error.py
kjr_llm/metrics/: Metric.py  MetricNotAvailableError.py  __init__.py  metric.py
kjr_llm/prompts/: Prompt.py  PromptSet.py  __init__.py  prompt.py  prompt_set.py
kjr_llm/provider/: DeepSeekProvider.py  FeedbackProvider.py  LiteLLMProvider.py  Llama3Provider.py  OpenAIProvider.py  __init__.py  deepseek_provider.py  feedback_provider.py  litellm_provider.py  llama3_provider.py  openai_provider.py  provider.py
kjr_llm/targets/: Custom.py  CustomTarget.py  LangChainTarget.py  LlamaIndexTarget.py  Target.py  __init__.py  custom_target.py  endpoint_target.py  langchain_target.py  llama_index_target.py  target.py
kjr_llm/tests/: GroundTruthTestSet.py  GroundednessTestSet.py  TestSet.py  UnknownTargetException.py  __init__.py  evaluate.py  ground_truth_test_set.py  groundedness_test_set.py  test_set.py
src/docs/: advanced.md  quickstart.md
src/eval/: __init__.py  evaluate.py
src/metrics/: Metric.py  __init__.py  metrics.py
(+118 files in other folders)
